--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My test page</title>
   </head>
   <body>
+    <!-- This is a comment -->
     <p>This is my page</p>
   </body>
 </html>
