--- a/example.html
+++ b/example.html
@@ -4,7 +4,7 @@
 <!--Comment-->
 <a href="https://www.example.com" title="An &quot;interesting&quot; reference">A link to my example.</a>
 
-<p>align=rght "Dr. Eleanor Gaye"</p>
+<p align=right> "Dr. Eleanor Gaye"</p>
 Awesome Science faculty
 University of Awesome
 Bobtown, CA 99999,
