--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <!-- This is a comment -->
     <p>This is my page</p>
-    <p>align=rght "Dr. Eleanor Gaye"</p>
+    <p align=right> "Dr. Eleanor Gaye"</p>
   </body>
 </html>
